hiking-routes-bb api bugfix
